--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
     </div>
     <p style="margin:5px 0;">This site is open sourced (<a href="https://git.foreskin.live/tacohitbox/bypass-it-for-me">source code</a>).</p>
     <noscript>
-      <i>This website uses Javascript. You can use our API documented <a href="https://git.foreskin.live/tacohitbox/bypass-it-for-me">here</a> if needed.</i>
+      <i>This website uses Javascript. You can use our API documented <a href="https://git.files.gay/tacohitbox/bypass-it-for-me">here</a> if needed.</i>
     </noscript>
   </body>
   <script src="/js/unhide.js"></script>
