--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
         <p>An error has occured! <span style="color:red;" id="err-txt"></span></p>
       </div>
     </div>
-    <p style="margin:5px 0;">This site is open sourced (<a href="https://git.foreskin.live/tacohitbox/bypass-it-for-me">source code</a>).</p>
+    <p style="margin:5px 0;">This site is open sourced (<a href="https://git.files.gay/tacohitbox/bypass-it-for-me">source code</a>).</p>
     <noscript>
       <i>This website uses Javascript. You can use our API documented <a href="https://git.files.gay/tacohitbox/bypass-it-for-me">here</a> if needed.</i>
     </noscript>
