--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@
       </div>
       <div id="success" style="display:none;">
         <p>Got link: <a id="link"></a></p><br>
-        <button onclick="thisone();">Bypass this one too!</button>
+        <button onclick="thisone();">Bypass this URL</button>
       </div>
       <div id="error" style="display:none;">
         <p>An error has occured! <span style="color:red;" id="err-txt"></span></p>
