--- a/static/index.html
+++ b/static/index.html
@@ -19,9 +19,13 @@
           <div class="lds-facebook"><div></div><div></div><div></div></div>
         </div>
       </div>
-      <div id="success" style="display:none;">
+      <div id="success-one" style="display:none;">
         <p>Got link: <a id="link"></a></p><br>
         <button onclick="thisone();">Bypass this URL</button>
+      </div>
+      <div id="success-mult" style="display:none;">
+        <p>Got links:</p>
+        <div id="links"></div>
       </div>
       <div id="error" style="display:none;">
         <p>An error has occured! <span style="color:red;" id="err-txt"></span></p>
