--- a/static/index.html
+++ b/static/index.html
@@ -37,9 +37,9 @@
         <a id="og" target="_blank" rel="noreferrer">Open original link.</a>
       </div>
     </div>
-    <p style="margin:5px 0;">This site is open sourced (<a href="https://git.files.gay/e/bypass-it-for-me">source code</a>).</p>
+    <p style="margin:5px 0;">This site is open sourced (<a href="https://git.gay/a/bypass-it-for-me">source code</a>).</p>
     <noscript>
-      <i>This website uses Javascript. You can use our API documented <a href="https://git.files.gay/e/bypass-it-for-me">here</a> if needed.</i>
+      <i>This website uses Javascript. You can use our API documented <a href="https://git.gay/a/bypass-it-for-me">here</a> if needed.</i>
     </noscript>
   </body>
   <script src="/js/unhide.js"></script>
