--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
       <div id="success-one" style="display:none;">
         <p>Got link: <a id="link" rel="noreferrer"></a></p><br>
         <button onclick="thisone();">Bypass this URL</button>
-        <button id="incorrect-cache-btn" style="display: none;" onclick="bypass('y');">Incorrect link?</button>
+        <button id="incorrect-cache-btn" style="display: none;" onclick="bypass('y');">Incorrect links?</button>
       </div>
       <div id="success-mult" style="display:none;">
         <p>Got links:</p>
