add privacy policy link

--- a/static/index.html
+++ b/static/index.html
@@ -53,6 +53,7 @@
       </div>
     </div>
     <p style="margin:5px 0;">This site is open sourced (<a href="http://github.com/tacohitbox/bypass-it-for-me">source code</a>).</p>
+    <p style="margin:5px 0;">This site also has a <a href="https://tacohitbox.com/privacy">privacy policy.</a></p>
     <noscript>
       <i>This website uses Javascript. You can use our API documented <a href="http://github.com/tacohitbox/bypass-it-for-me">here</a> if needed.</i>
     </noscript>
