--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
       <div id="success-mult" style="display:none;">
         <p>Got links:</p>
         <div id="links"></div>
-        <button id="incorrect-cache-btn-mult" style="display: none; margin-top:2px;" onclick="bypass('y');">Incorrect link?</button>
+        <button id="incorrect-cache-btn-mult" style="display: none; margin-top:2px;" onclick="bypass('y');">Incorrect links?</button>
       </div>
       <div id="error" style="display:none;">
         <p>An error has occured! <span style="color:red;" id="err-txt"></span></p>
