fix annoying frontend issue

--- a/static/index.html
+++ b/static/index.html
@@ -25,9 +25,9 @@
           <input type="checkbox" id="dnch" name="dnch" autocomplete="off">
         </div>
         <div id="fastforward-enabled" style="display:none;">
-          <label for="igch">Ignore FastForward?</label>
+          <label for="igff">Ignore FastForward?</label>
           <input type="checkbox" id="igff" name="igff" autocomplete="off"><br>
-          <label for="dnch">Don't share response with FastForward?</label>
+          <label for="dnff">Don't share response with FastForward?</label>
           <input type="checkbox" id="dnff" name="dnff" autocomplete="off">
         </div>
       </div>
