--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <center><title>Bypass All Shortlinks</title></center>
+    <title>Bypass All Shortlinks</title>
     <link href="/css/main.css" rel="stylesheet">
     <link href="/css/load.css" rel="stylesheet">
     <meta name="viewport" content="width=devide-width, inital-scale=1.0">
