--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=devide-width, inital-scale=1.0">
   </head>
   <body>
-   
+    <div>
+      <h2 style="margin:0 0 5px 0">Bypass All Shortlinks Sites Automatically by <a href="https://greasyfork.org/en/users/810571-bloggerpemula">Bloggerpemula</a></h2>
+      <p class="nm">Say Thanks and Support my work by Buy Me Coffee https://www.buymeacoffee.com/bloggerpemula
+Mau ngucapin terimakasih dan mendukung Skripku agar tetap Update, Traktir Kopi geh https://sociabuzz.com/bloggerpemula/tribe.</p>
+    </div>   
   </body>
   <script src="/js/unhide.js"></script>
   <script src="/js/app.js"></script>
