--- a/static/index.html
+++ b/static/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div>
-      <h2 style="margin:0 0 5px 0">Bypass All Shortlinks Sites Automatically by <a href="https://greasyfork.org/en/users/810571-bloggerpemula">Bloggerpemula</a></h2>
-      <p class="nm">Say Thanks and Support my work by Buy Me Coffee https://www.buymeacoffee.com/bloggerpemula
-Mau ngucapin terimakasih dan mendukung Skripku agar tetap Update, Traktir Kopi geh https://sociabuzz.com/bloggerpemula/tribe.</p>
+      <h1 style="margin:0 0 5px 0">Bypass All Shortlinks Sites Automatically by <a href="https://greasyfork.org/en/users/810571-bloggerpemula">Bloggerpemula</a></h1>
+      <center><p class="nm">Say Thanks and Support my work by Buy Me Coffee at <a href="https://www.buymeacoffee.com/bloggerpemula">buymeacoffee.com</a>
+Mau ngucapin terimakasih dan mendukung Skripku agar tetap Update, Traktir Kopi geh di <a href="https://sociabuzz.com/bloggerpemula/tribe">sociabuzz.com</a></p></center>
     </div>   
   </body>
   <script src="/js/unhide.js"></script>
